--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,15 @@
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.14.4",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "flatpickr": "^4.5.1",
+    "nouislider": "^11.1.0",
+    "register-service-worker": "^1.5.2",
+    "vue": "^2.6.6",
+    "vue-flatpickr-component": "^8.1.1",
+    "vue-lazyload": "^1.2.6",
+    "vue2-transitions": "^0.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -78,7 +85,13 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-plugin-pwa": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
